[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/BackToStart.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Win.gd" type="Script" id=2]

[node name="WinMainNode" type="Node2D"]
script = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 859.0
margin_top = 494.0
margin_right = 958.0
margin_bottom = 525.0
text = "GEWONNEN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 710.0
margin_top = 538.0
margin_right = 1078.0
margin_bottom = 642.0
text = "NOCHMAL!"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IndustryValue" type="RichTextLabel" parent="."]
margin_left = 710.0
margin_top = 712.0
margin_right = 935.0
margin_bottom = 743.0
rect_pivot_offset = Vector2( -461, 80 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Industry Value: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="RichTextLabel" parent="IndustryValue"]
margin_left = 162.0
margin_right = 261.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( -306, -141 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IndustryPercantage" type="RichTextLabel" parent="."]
margin_left = 710.0
margin_top = 774.0
margin_right = 935.0
margin_bottom = 805.0
rect_pivot_offset = Vector2( -461, 80 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Indusrty Percantage: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="RichTextLabel" parent="IndustryPercantage"]
margin_left = 162.0
margin_right = 261.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( -461, 80 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WildernessPercantage" type="RichTextLabel" parent="."]
margin_left = 710.0
margin_top = 743.0
margin_right = 935.0
margin_bottom = 774.0
rect_pivot_offset = Vector2( -461, 80 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Wilderness Percantage: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="RichTextLabel" parent="WildernessPercantage"]
margin_left = 162.0
margin_right = 261.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( -461, 80 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WildernessValue" type="RichTextLabel" parent="."]
margin_left = 710.0
margin_top = 681.0
margin_right = 935.0
margin_bottom = 712.0
rect_pivot_offset = Vector2( -461, 80 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Wilderness Value:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="RichTextLabel" parent="WildernessValue"]
margin_left = 162.0
margin_right = 261.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( -506, -110 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
